# boteach

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  Readme.md  app.py  main.py  pyproject.toml  test_app.py  test_main.py
.github/: dependabot-merge.yml
.github/workflows/: pytest.yml  python.yml
config/: constants.py
data/: Neurons and the brain.vtt  transcript.txt
enums/: app.py  promptAnswer.py
handlers/: userinput.py
utils/: helpers_youtube.py
utils/ai/: open_ai.py
utils/inputs/: get_repo.py  html.py  test_html.py
views/: sidebar.py
