[tool.poetry]
name = "boteach"
version = "0.3.0"
description = "QA bot assist for video-oriented courses"
authors = ["Hiro <laciferin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.27.2"
pydantic = "^2.4.2"
icecream = "^2.1.3"
python-dotenv = "^1.0.0"
openai = "^1.3.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
